BB-2109: New shopping list is not available after creation from product view page  - fix dropdown z-index

--- a/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/less/shared/bootstrap-override.less
+++ b/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/less/shared/bootstrap-override.less
@@ -855,3 +855,7 @@
     }
   }
 }
+
+.dropdown-menu {
+  z-index: 900;
+}
